# camo-fleet

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Control-plane-API.yaml  README copy.md  README.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
control-plane/: openapi.control.yaml  pyproject.toml
docker/: Dockerfile.control  Dockerfile.runner  Dockerfile.runner-core  Dockerfile.runner-vnc  Dockerfile.ui  Dockerfile.worker  Dockerfile.worker-vnc-gateway  nginx.conf
docs/: release.md  security-options.md
runner/: pyproject.toml
runner/camoufox/: __init__.py
runner/camoufox_runner/: __main__.py  browser.py  cleanup.py  config.py  main.py  models.py  playwright_control.py  prewarm.py  prewarm_pool.py  processes.py  sessions.py  vnc.py  vnc_controller.py
runner/src/camoufox_runner/: __init__.py  config.py  diagnostics.py  main.py  models.py  sessions.py
runner/tests/: conftest.py  test_cors.py  test_diagnostics.py  test_session_components.py  test_sessions.py  test_vnc_public_url.py  test_vnc_resource_pool.py
shared/: __init__.py
ui/: TASK.md  package-lock.json  package.json  vite.config.ts
worker/: openapi.worker.yaml  pyproject.toml
worker-vnc/: pyproject.toml
worker-vnc/camofleet_worker_vnc/: __init__.py  __main__.py  app.py  config.py  identifiers.py
worker-vnc/camofleet_worker_vnc/static/: viewer.css  viewer.js
worker-vnc/camofleet_worker_vnc/templates/: error.html  index.html
worker-vnc/tests/: test_app.py  test_config.py  test_frontend_assets.py  test_identifiers.py
(+92 files in other folders)
